--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,21 @@
-# https://developer.nvidia.com/cudnn-downloads?target_os=Windows&target_arch=x86_64&target_version=11
-# https://developer.nvidia.com/cuda-toolkit
-fastapi==0.117.1
-uvicorn[standard]==0.37.0
-python-multipart==0.0.20
-pillow==11.2.1
-rembg==2.0.67
+# --- Основной веб-фреймворк ---
+fastapi
+uvicorn
+python-multipart
+
+# --- HTTP-клиент для API Яндекса ---
+httpx
+
+# --- Обработка изображений ---
+# rembg[gpu] для ускорения на NVIDIA GPU, используйте rembg для CPU
+rembg[gpu]
+Pillow
+
+# --- Обработка аудио ---
+pydub
+soundfile
+
+# --- AI & Voice Conversion ---
+# Важно: torch нужно установить ОТДЕЛЬНОЙ командой до этого файла.
+# Эта библиотека установит нужную версию fairseq как зависимость.
+rvc-python
